--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -5,6 +5,15 @@
 
 <div class="row marketing">
   <div class="col-lg-6">
+    <h4>About</h4>
+    <ul>
+      <li>
+        <a href="https://github.com/demarius">Github</a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="col-lg-6">
     <h4>Resources</h4>
     <ul>
       <li>
